Allow Courses management via API
